# kakfa-poison-pill

./: .gitignore  README.md  alerting_rules.yml  alertmanager.yml  consumer.py  consumer_safe.py  flink.sql  main.py  producer.py  prometheus.yml  pyproject.toml
